--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #E6E1C3;
+         background-color: #5F64D3;
          padding-top: 100px;
          }
          body {
@@ -66,8 +66,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #C1C72C;
-         color: black;
+         background-color: #26175A;
+         color: white;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -78,7 +78,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #black;
+         border: 6px solid #73448C;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -121,8 +121,8 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #C1C72C;
-           color: black;
+           background-color: #26175A;
+           color: white;
            margin: 20px;
          }
          
@@ -149,11 +149,14 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="card">
-                <h1>Hi!</h1>
-                <h1>My name is marisamocha!</h1>
-                <h3>Currently @ null</h3>
-              </div>
+              <!-- <div class="card"> -->
+                <header class="photo-header">
+                  <img src="https://avatars3.githubusercontent.com/u/29614473?v=4" alt="Ramon Sanchez">
+                  <h1>Hi!</h1>
+                  <h1>My name is Ramon Sanchez!</h1>
+                  <h3>Currently @ LAUSD</h3>
+                </header>
+              <!-- </div> -->
             </div>
           </div>
         </div>
