Updated html body template

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #5F64D3;
+         background-color: #879CDF;
          padding-top: 100px;
          }
          body {
@@ -66,7 +66,7 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #26175A;
+         background-color: #FF8374;
          color: white;
          padding: 10px;
          width: 95%;
@@ -78,7 +78,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #73448C;
+         border: 6px solid #FEE24C;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -121,7 +121,7 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #26175A;
+           background-color: #FF8374;
            color: white;
            margin: 20px;
          }
@@ -143,24 +143,22 @@
           } 
          }
       </style>
-  <body>
-    <div class="wrapper">
-      <main>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <!-- <div class="card"> -->
-                <header class="photo-header">
-                  <img src="https://avatars3.githubusercontent.com/u/29614473?v=4" alt="Ramon Sanchez">
-                  <h1>Hi!</h1>
-                  <h1>My name is Ramon Sanchez!</h1>
-                  <h3>Currently @ LAUSD</h3>
-                </header>
-              <!-- </div> -->
-            </div>
-          </div>
-        </div>
-      </main>
-    </div>
-  </body>
+<body>
+  <div class="wrapper">
+    <div class="links-nav"></div>
+    <header class="photo-header">
+      <img src="https://avatars3.githubusercontent.com/u/9385814?v=4" alt="Christian Eckenrode">
+      <h1>Hi!</h1>
+      <h2>My name is Christian Eckenrode!</h2>
+      <h5>Currently @ Trilogy Education Services</h5>
+      <br>
+      <h6><a href="Richmond, Virginia">Richmond, Virginia</a> <a href="https://github.com/ceckenrode">GitHub</a> <a href="https://eck.im/twitter">Blog</a></h6>
+    </header>
+    <main>
+      <div class="container">
+        <h4>I build things and teach people to code.</h4>
+      </div>
+    </main>
+  </div>
+</body>
   
