Added githubStars function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #879CDF;
+         background-color: #E6E1C3;
          padding-top: 100px;
          }
          body {
@@ -49,6 +49,7 @@
          }
          h3 {
          font-size: 2em;
+         display: block;
          }
          h4 {
          font-size: 1.5em;
@@ -58,7 +59,6 @@
          }
          h6 {
          font-size: 1.2em;
-         margin: 0 auto;
          }
          .photo-header {
          position: relative;
@@ -67,8 +67,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #FF8374;
-         color: white;
+         background-color: #C1C72C;
+         color: black;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -79,10 +79,10 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #FEE24C;
+         border: 6px solid #black;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
-         .photo-header h1, .photo-header h2 {
+         .photo-header h1, .photo-header h2, .photo-header h5 {
          width: 100%;
          text-align: center;
          }
@@ -122,8 +122,8 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #FF8374;
-           color: white;
+           background-color: #C1C72C;
+           color: black;
            margin: 20px;
          }
          
@@ -149,28 +149,28 @@
     <div class="links-nav"></div>
     <!-- Profile picture -->
     <header class="photo-header">
-      <img src="https://avatars3.githubusercontent.com/u/9385814?v=4" alt="Christian Eckenrode">
+      <img src="https://avatars0.githubusercontent.com/u/20587034?v=4" alt="Christopher J Flick">
       <h1>Hi!</h1>
-      <h3>My name is Christian Eckenrode!</h3>
-      <h5>Currently @ Trilogy Education Services</h5>
-      <h6><a href="Richmond, Virginia">Richmond, Virginia</a> <a href="https://github.com/ceckenrode">GitHub</a> <a href="https://eck.im/twitter">Blog</a></h6>
+      <h2>My name is Christopher J Flick!</h2>
+      <h5>Currently @ School</h5>
+      <h6><a href="Los Angeles">Los Angeles</a> <a href="https://github.com/ChrisFlick">GitHub</a> <a href="https://chrisflick.github.io/updated-portfolio/src/index.html">Blog</a></h6>
     </header>
     <main>
       <div class="container">
         <div class="col">
           <!-- Profile bio -->
-          <h4>I build things and teach people to code.</h4>
+          <h4>Currently attending UCLA_Extension's Full-Stack bootcamp; eager to work in software development.</h4>
           <div class="row">
             <div class="col">
               <div class="card">
                 <h5>Public Repositories</h5>
-                <h6>135</h6>
+                <h6>14</h6>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <h5>Followers</h5>
-                <h6>101</h6>
+                <h6>2</h6>
               </div>
             </div>
           </div> <!-- End of row -->
@@ -178,13 +178,13 @@
             <div class="col">
               <div class="card">
                 <h5>GitHub Stars</h5>
-                <h6>Number</h6>
+                <h6>2</h6>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <h5>Following</h5>
-                <h6>70</h6>
+                <h6>0</h6>
               </div>
             </div>
           </div><!-- End of row -->
