Added font awesome symbols

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #E6E1C3;
+         background-color: #879CDF;
          padding-top: 100px;
          }
          body {
@@ -60,6 +60,9 @@
          h6 {
          font-size: 1.2em;
          }
+         span {
+           visibility: hidden;
+         }
          .photo-header {
          position: relative;
          margin: 0 auto;
@@ -67,8 +70,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #C1C72C;
-         color: black;
+         background-color: #FF8374;
+         color: white;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -79,7 +82,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #black;
+         border: 6px solid #FEE24C;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2, .photo-header h5 {
@@ -88,6 +91,9 @@
          }
          .photo-header h1 {
          margin-top: 10px;
+         }
+         .photo-header h6 {
+         margin: 20px;
          }
          .links-nav {
          width: 100%;
@@ -122,8 +128,8 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #C1C72C;
-           color: black;
+           background-color: #FF8374;
+           color: white;
            margin: 20px;
          }
          
@@ -149,28 +155,30 @@
     <div class="links-nav"></div>
     <!-- Profile picture -->
     <header class="photo-header">
-      <img src="https://avatars0.githubusercontent.com/u/20587034?v=4" alt="Christopher J Flick">
+      <img src="https://avatars3.githubusercontent.com/u/9385814?v=4" alt="Christian Eckenrode">
       <h1>Hi!</h1>
-      <h2>My name is Christopher J Flick!</h2>
-      <h5>Currently @ School</h5>
-      <h6><a href="Los Angeles">Los Angeles</a> <a href="https://github.com/ChrisFlick">GitHub</a> <a href="https://chrisflick.github.io/updated-portfolio/src/index.html">Blog</a></h6>
+      <h2>My name is Christian Eckenrode!</h2>
+      <h5>Currently @ Trilogy Education Services</h5>
+      <h6><a href="https://www.google.com/maps/place/Richmond, Virginia" target="_blank"><i class="fas fa-location-arrow"></i> Richmond, Virginia</a>
+        <span>blank</span><a href="https://github.com/ceckenrode" target="_blank"><i class="fab fa-github-alt"></i> GitHub</a>
+        <span>black</span><a href="https://eck.im/twitter" target="_blank"><i class="fas fa-rss"></i> Blog</a></h6>
     </header>
     <main>
       <div class="container">
         <div class="col">
           <!-- Profile bio -->
-          <h4>Currently attending UCLA_Extension's Full-Stack bootcamp; eager to work in software development.</h4>
+          <h4>I build things and teach people to code.</h4>
           <div class="row">
             <div class="col">
               <div class="card">
                 <h5>Public Repositories</h5>
-                <h6>14</h6>
+                <h6>135</h6>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <h5>Followers</h5>
-                <h6>2</h6>
+                <h6>101</h6>
               </div>
             </div>
           </div> <!-- End of row -->
@@ -178,13 +186,13 @@
             <div class="col">
               <div class="card">
                 <h5>GitHub Stars</h5>
-                <h6>2</h6>
+                <h6>68</h6>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <h5>Following</h5>
-                <h6>0</h6>
+                <h6>70</h6>
               </div>
             </div>
           </div><!-- End of row -->
