Installed electron and electron-html-to

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #879CDF;
+         background-color: #5F64D3;
          padding-top: 100px;
          }
          body {
@@ -70,7 +70,7 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #FF8374;
+         background-color: #26175A;
          color: white;
          padding: 10px;
          width: 95%;
@@ -82,7 +82,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #FEE24C;
+         border: 6px solid #73448C;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2, .photo-header h5 {
@@ -128,7 +128,7 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #FF8374;
+           background-color: #26175A;
            color: white;
            margin: 20px;
          }
@@ -155,30 +155,30 @@
     <div class="links-nav"></div>
     <!-- Profile picture -->
     <header class="photo-header">
-      <img src="https://avatars3.githubusercontent.com/u/9385814?v=4" alt="Christian Eckenrode">
+      <img src="https://avatars3.githubusercontent.com/u/29614473?v=4" alt="Ramon Sanchez">
       <h1>Hi!</h1>
-      <h2>My name is Christian Eckenrode!</h2>
-      <h5>Currently @ Trilogy Education Services</h5>
-      <h6><a href="https://www.google.com/maps/place/Richmond, Virginia" target="_blank"><i class="fas fa-location-arrow"></i> Richmond, Virginia</a>
-        <span>blank</span><a href="https://github.com/ceckenrode" target="_blank"><i class="fab fa-github-alt"></i> GitHub</a>
-        <span>black</span><a href="https://eck.im/twitter" target="_blank"><i class="fas fa-rss"></i> Blog</a></h6>
+      <h2>My name is Ramon Sanchez!</h2>
+      <h5>Currently @ LAUSD</h5>
+      <h6><a href="https://www.google.com/maps/place/Chatsworth, CA" target="_blank"><i class="fas fa-location-arrow"></i> Chatsworth, CA</a>
+        <span>blank</span><a href="https://github.com/songwright" target="_blank"><i class="fab fa-github-alt"></i> GitHub</a>
+        <span>black</span><a href="https://songwright.github.io/materialize-portfolio/" target="_blank"><i class="fas fa-rss"></i> Blog</a></h6>
     </header>
     <main>
       <div class="container">
         <div class="col">
           <!-- Profile bio -->
-          <h4>I build things and teach people to code.</h4>
+          <h4>Full Stack Web Developer with experience in teaching and front end development, currently enrolled in the UCLA Extension Full Stack Web Development boot camp.</h4>
           <div class="row">
             <div class="col">
               <div class="card">
                 <h5>Public Repositories</h5>
-                <h6>135</h6>
+                <h6>26</h6>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <h5>Followers</h5>
-                <h6>101</h6>
+                <h6>3</h6>
               </div>
             </div>
           </div> <!-- End of row -->
@@ -186,13 +186,13 @@
             <div class="col">
               <div class="card">
                 <h5>GitHub Stars</h5>
-                <h6>68</h6>
+                <h6>1</h6>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <h5>Following</h5>
-                <h6>70</h6>
+                <h6>5</h6>
               </div>
             </div>
           </div><!-- End of row -->
